--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -12,7 +12,7 @@ body
   justify-content: center
   align-items: center
   overflow: auto
-  font-family: "Open Sans", sans-serif
+  font-family: "Open Sans", "Arial Black", Arial, sans-serif
 
 .canvas-wrap
   display: flex
